--- a/src/Handwriting_Recognization/Handwriting_Recognization.css
+++ b/src/Handwriting_Recognization/Handwriting_Recognization.css
@@ -5,24 +5,19 @@
 }
 
 .container1 {
-  display: inline-block;
-  margin: 0 auto;
+  margin: 5% auto auto 0;
 }
 
 .container2 {
-  display: inline-block;
-  margin: 10%;
-}
-.chart {
-  display: inline-block;
-  position: fixed;
-  top: 12%;
-  left: 45%;
+  margin: 0 auto;
 }
 
-.drawingCanvas {
+.chart {
   display: inline-block;
-  margin: 40% 150%;
+}
+
+.canvas-container {
+  display: inline-block;
 }
 
 .loading {
