added user instructions

--- a/src/Handwriting_Recognization/Handwriting_Recognization.css
+++ b/src/Handwriting_Recognization/Handwriting_Recognization.css
@@ -1,7 +1,11 @@
 * {
   font-family: "Roboto";
   font-weight: 800;
-  color: #ffa800;
+  color: #000000;
+}
+
+p {
+  margin-top: 30px;
 }
 
 .container1 {
@@ -22,7 +26,7 @@
 
 .loading {
   display: inline-block;
-  width: 212px;
+  width: 222px;
 }
 
 .icon {
